Created Login form, hooked up to back end

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Hack Pass</h1>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="public/style/css/front.css"/>
+    </head>
+    <body>
+        <div class="login">
+            <div class="container">
+                <div class="login-content">
+                    <img src="public/images/logo.png"/>
+                    <form method="post" action="http://localhost:9001/create_event">
+                        <input id="appID" name="appID" type="text" placeholder="Enter APP ID"/>
+                        <input id="secret" name="secret" type="password" placeholder="Enter APP Secret Ket"/>
+                        <input type="submit" placeholder="Create Event"/>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
