--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="public/style/css/front.css"/>
+        <link rel="stylesheet" type="text/css" href="/style/css/front.css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
     <body>
         <div class="login">
             <div class="container">
                 <div class="login-content">
                     <img src="public/images/logo.png"/>
-                    <form method="post" action="http://localhost:9001/create_event">
+                    <form id="send" method="post" action="http://localhost:9001/create_event">
                         <input id="appID" name="appID" type="text" placeholder="Enter APP ID"/>
                         <input id="secret" name="secret" type="password" placeholder="Enter APP Secret Ket"/>
-                        <input type="submit" placeholder="Create Event"/>
+                        <input id="submit" onclick="return direct()" name="submit" type="submit" placeholder="Create Event"/>
                     </form>
                 </div>
             </div>
         </div>
+        <script type="text/javascript">
+            function direct() {
+                setTimeout(function(){
+                    window.location.href = 'http://localhost:9001';
+                    return false;
+                }, 2000);
+            }
+        </script>
     </body>
 </html>
