--- a/create-event.html
+++ b/create-event.html
@@ -1,1 +1,30 @@
-<h1>This is the event creation page</h1>
+<html>
+    <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    </head>
+    <body>
+    <h1>This is the event creation page</h1>
+    <h3 id="mongo"></h3>
+        <script>
+            function getQueryVariable(variable)
+            {
+                var query = window.location.search.substring(1);
+                var vars = query.split("&");
+                for (var i=0;i<vars.length;i++) {
+                    var pair = vars[i].split("=");
+                    if(pair[0] == variable){
+                        var string = pair[1];
+                        var string1 = string.replace("%22", "");
+                        var string2 = string1.replace("%22", "");
+                        return string2;
+                    }
+                }
+                return(false);
+            }
+
+            var eventId = getQueryVariable('event_id');
+            $('#mongo').append(eventId)
+        </script>
+    </body>
+
+</html>
