--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript">
-            function direct() {
-                setTimeout(function(){
-                    window.location.href = 'http://localhost:9001';
-                    return false;
-                }, 2000);
-            }
-        </script>
+        <!--<script type="text/javascript">-->
+            <!--function direct() {-->
+                <!--setTimeout(function(){-->
+                    <!--window.location.href = 'http://localhost:9001';-->
+                    <!--return false;-->
+                <!--}, 2000);-->
+            <!--}-->
+        <!--</script>-->
     </body>
 </html>
