--- a/create-event.html
+++ b/create-event.html
@@ -1,1 +1,29 @@
-<h1>This is the event creation page</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset=utf-8 />
+    <title>Event Creation Page</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <!--[if IE]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
+<body>
+    <header>
+        test
+    </header>
+    <section>
+        <article>
+
+            test
+        </article>
+    </section>
+    <section>
+        <article>
+
+            test
+        </article>
+    </section>
+</body>
+</html>
