--- a/create-event.html
+++ b/create-event.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8 />
+    <meta charset=utf-8
     <title>Event Creation Page</title>
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
