Created organiser panel

--- a/organiser.html
+++ b/organiser.html
@@ -1,10 +1,30 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="public/style/css/organiser.css"/>
+        <link rel="stylesheet" type="text/css" href="/style/css/organiser.css"/>
     </head>
     <body>
         <section id="logo">
-            <img src="public/"
+            <img src="/images/logo.svg"/>
+        </section>
+        <section id="users">
+            <div class="panel-header">
+                <h2><span id="hackathon-name"></span> Organiser Panel</h2>
+                <hr>
+            </div>
+            <div class="panel-content">
+                <img src="/images/mail.svg"/>
+                <h3>Message a user</h3>
+                <div id="user-list">
+                    <div class="user-item">
+                        <div class="user-left">
+                            <h3>Name</h3>
+                        </div>
+                        <div class="user-right">
+                            <button>Message</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
