--- a/organiser.html
+++ b/organiser.html
@@ -9,6 +9,10 @@
         <section id="users">
             <div class="panel-header">
                 <h2><span id="hackathon-name"></span> Organiser Panel</h2>
+                <form method="post" action="/event/attendees">
+                    <input type="text" placeholder="Insert APP ID"/>
+                    <input type="submit" placeholder="Submit"/>
+                </form>
                 <hr>
             </div>
             <div class="panel-content">
