--- a/create-event.html
+++ b/create-event.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset=utf-8 />
     <title>Event Creation Page</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="/style/css/styles.css" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,7 +13,7 @@
     <header class="padding">
         <img src="assets/logo.svg" alt="HackPass" />
     </header>
-    <section id="eventPic"><img src="assets/swag.jpg" /></section>
+    <section id="eventPic"><img src="public/images/swag.jpg" /></section>
     <section class="main padding">
         <article>
 
