--- a/organiser.html
+++ b/organiser.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="/style/css/organiser.css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
     <body>
         <section id="logo">
@@ -8,11 +9,7 @@
         </section>
         <section id="users">
             <div class="panel-header">
-                <h2><span id="hackathon-name"></span> Organiser Panel</h2>
-                <form method="post" action="/event/attendees">
-                    <input type="text" placeholder="Insert APP ID"/>
-                    <input type="submit" placeholder="Submit"/>
-                </form>
+                <h2><span id="hackathon-name"></span>, Organiser Panel</h2>
                 <hr>
             </div>
             <div class="panel-content">
@@ -34,25 +31,83 @@
         <script>
             //Get event title
 
-            var formData =
+            function getQueryVariable(variable) {
+                var query = window.location.search.substring(1);
+                var vars = query.split("&");
+                for (var i=0;i<vars.length;i++) {
+                    var pair = vars[i].split("=");
+                    if(pair[0] == variable){
+                        return string = pair[1];
+
+                    }
+                }
+                return(false);
+            }
+
+            var eventId = getQueryVariable('event_id');
+            console.log(eventId);
+
             $.ajax({
                 type: 'post',
-                url: 'http://event/attendees',
-                data: formData,
+                url: 'http://localhost:9001/event/attendees',
+                data: {
+                    eventID: getQueryVariable('event_id')
+                },
                 xhrFields: {
                     withCredentials: false
-                },
-                headers: {
-
                 },
                 success: function (data) {
                     console.log('Success');
                     console.log(data);
+                    addData(data);
                 },
                 error: function () {
                     console.log('We are sorry but our servers are having an issue right now');
                 }
             })
+
+            function addData(data){
+                //Add page name
+                $('#hackathon-name').html(data.eventName);
+                //Add users
+                const attendee = data.attendees;
+                const userList = $('.user-list');
+                console.log('Attendee: ' + attendee);
+                attendee.forEach(processMembers);
+
+                function processMembers(item, i, array) {
+                    const userItem = document.createElement("DIV");
+                    userList.append(userItem);
+                    const userLeft = document.createElement("DIV");
+                    const userRight = document.createElement("DIV");
+                    const userLeftH3 = document.createElement("H3");
+                    const userRightButton = document.createElement("BUTTON");
+                    console.log(array[i].first_name);
+                    userLeftH3.innerText = array[i].first_name;
+                    userItem.appendChild(userLeft);
+                    userItem.appendChild(userRight);
+                    userLeft.appendChild(userLeftH3);
+                    userRight.appendChild(userRightButton);
+                }
+
+            }
+
+            function test(){
+                const userItem = document.createElement("DIV");
+                const userLeft = document.createElement("DIV");
+                userLeft.className += 'userLeft';
+                const userRight = document.createElement("DIV");
+                userRight.className += 'userRight';
+                userItem.appendChild(userLeft);
+                userItem.appendChild(userRight);
+                const name = document.createElement("H3");
+                name.innerText = array[i].first_name;
+                const button = document.createElement("BUTTON");
+                userLeft.appendChild(name);
+                userRight.appendChild(button);
+                console.log(userItem);
+            }
+            test();
         </script>
     </body>
 </html>
