all front end complete MVP

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div class="login">
             <div class="container">
                 <div class="login-content">
-                    <img src="public/images/logo.png"/>
+                    <img src="/images/logo.svg"/>
                     <form id="send" method="post" action="http://localhost:9001/create_event">
                         <input id="appID" name="appID" type="text" placeholder="Enter APP ID"/>
                         <input id="secret" name="secret" type="password" placeholder="Enter APP Secret Ket"/>
