Modified login page

--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
     <body>
-        <div class="login">
-            <div class="container">
-                <div class="login-content">
-                    <img src="/images/logo.svg"/>
-                    <form id="send" method="post" action="http://localhost:9001/create_event">
-                        <input id="appID" name="appID" type="text" placeholder="Enter APP ID"/>
-                        <input id="secret" name="secret" type="password" placeholder="Enter APP Secret Ket"/>
-                        <input id="submit" onclick="return direct()" name="submit" type="submit" placeholder="Create Event"/>
-                    </form>
+        <div class="page-content">
+            <div class="register box">
+                <div class="container">
+                    <div class="login-content">
+                        <img src="/images/logo.svg"/>
+                        <form id="send" method="post" action="http://localhost:9001/create_event">
+                            <input id="appID" name="appID" type="text" placeholder="Enter APP ID"/>
+                            <input id="secret" name="secret" type="password" placeholder="Enter APP Secret Ket"/>
+                            <input id="submit" onclick="return direct()" name="submit" type="submit" value="Create Event"/>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!--<script type="text/javascript">-->
-            <!--function direct() {-->
-                <!--setTimeout(function(){-->
-                    <!--window.location.href = 'http://localhost:9001';-->
-                    <!--return false;-->
-                <!--}, 2000);-->
-            <!--}-->
-        <!--</script>-->
+            <div class="login box">
+                <h3>Sign In</h3>
+                <form id="send" method="post" action="http://localhost:9001/create_event">
+                    <input id="appIDLogin" name="appIDLogin" type="text" placeholder="Enter APP ID"/>
+                    <input id="submitLogin" name="submitLogin" type="submit" value="Login"/>
+                </form>
+            </div>
+        </div
     </body>
 </html>
