--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
                     <input id="submitLogin" name="submitLogin" type="submit" value="Login"/>
                 </form>
             </div>
-        </div
+        </div>
     </body>
 </html>
