Finalised User UI (sadly not API integrated yet)
yay

--- a/qrcode.html
+++ b/qrcode.html
@@ -11,11 +11,11 @@
                     <img src="/images/logo.svg"/>
                     <div class="profile_header">
                         <p class="name">Aaron Trello Wharton</p>
-                        <p class="phone">+44 (7411305139)</p>
+                        <p class="phone">+44 (1234567890)</p>
                     </div>
                     <div class="qrCode">
                         <!-- logic to create the QR code -->
-                        <img src="images/default_qrcode.png" alt="My QR Code"/>
+                        <img src="images/qrcode.svg"  width="200" height="200" alt="My QR Code"/>
                     </div>
                     <div class="threeColumn">
                         <div class="threeColumn_item">
@@ -34,8 +34,9 @@
                     <div class="features">
                         <ul>
                             <li>Search for team mates with LinkedIn</li>
-                            <li>Join our Slack Channel</li>
-                            <li>Bump phones with a hacker to share contacts</li>
+                            <li>Integrated with Slack and Twilio</li>
+                            <li>Bump phones with a hacker to share contacts
+                            <li>So many more features planned</li>
                         </ul>
                     </div>
                 </div>
