--- a/organiser.html
+++ b/organiser.html
@@ -37,7 +37,7 @@
                         <input type="radio" name="messageOp" value="individual">Send Individual Call<br>
                     </div>
                     <textarea id="message" name="message" value="message" placeholder="Enter your message..."></textarea>
-                    <input id="hidden" type="number" name="hidden" value=""/>
+                    <input id="hidden" type="hidden" name="hidden" value=""/>
                     <input id="submit" type="submit" name="submit" value="Send"/>
                 </form>
             </div>
