--- a/organiser.html
+++ b/organiser.html
@@ -8,11 +8,16 @@
     </head>
     <body>
         <section id="logo">
-            <img src="/images/logo.svg"/>
+            <a href="/">
+                <img src="/images/logo.svg"/>
+            </a>
         </section>
         <section id="users">
             <div class="panel-header">
                 <h2><span id="hackathon-name"></span>, Organiser Panel</h2>
+                <a href="/myaccount">
+                    <img src="/images/profile.svg"/>
+                </a>
                 <hr>
             </div>
             <div class="panel-content">
