Fixed sent message screen

--- a/organiser.html
+++ b/organiser.html
@@ -16,7 +16,7 @@
             <div class="panel-header">
                 <h2><span id="hackathon-name"></span>, Organiser Panel</h2>
                 <a href="/myaccount">
-                    <img src="/images/profile.svg"/>
+                    <img id="profile" src="/images/profile.svg"/>
                 </a>
                 <hr>
             </div>
